<resources>
    <string name="app_name">GarageAdministrationApp</string>
    <string name="welcome_text">COBE garage</string>
    <string name="input_car_btn_text">Input car to fix</string>
    <string name="salary_calculator_btn_text">Calculate salary</string>
    <string name="refill_expendables_btn_text">Refill expendable items</string>
    <string name="check_balance_btn_text">Check bank balance</string>
    <string name="garage_logo_description_text">Garage logo</string>
    <string name="car_input_title_text">Input car form</string>
    <string name="owner_name_hint">Input owners name</string>
    <string name="owner_email_hint">Input owners E-mail</string>
    <string name="mechanic_work_radio_button">Mechanic Work</string>
    <string name="body_work_radio_button">Body work</string>
    <string name="both_work_radio_button">Both</string>
    <string name="radio_group_title">Choose work needed:</string>
    <string name="submit_car_text">Submit</string>
    <string name="staf_list_heading_text">Staff list</string>
    <string name="expendables_heading_text">Expendables</string>
    <string name="empty_TV_error_text">You can\'t leave this empty</string>
    <string name="bank_balance_format">Your current bank balance is %.2f$</string>
    <string name="car_fixed_text">Car is fixed, cost of repair is: %.2f$</string>
    <string name="person_salary_format_text">%1$s worked for %2$d hour(s) and his salary is: %3$.2f</string>
</resources>
