<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cobeosijek.garageadministrationapp.MainActivity">

    <ImageView
        android:id="@+id/garageLogoIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/garage_logo_description_text"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/welcomeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/garageLogoIV"
        android:gravity="center"
        android:text="@string/welcome_text" />

    <Button
        android:id="@+id/inputCarBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/garageLogoIV"
        android:text="@string/input_car_btn_text" />

    <Button
        android:id="@+id/salaryCalculatorBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputCarBTN"
        android:text="@string/salary_calculator_btn_text" />

    <Button
        android:id="@+id/refillExpendablesBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/salaryCalculatorBTN"
        android:text="@string/refill_expendables_btn_text" />

    <Button
        android:id="@+id/checkBalanceBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/refillExpendablesBTN"
        android:text="@string/check_balance_btn_text" />

</RelativeLayout>
